Beginning of the PID control

--- a/Coursera/ITA/Controle/Week 1/Controle Malha Aberta e Malha Fechada.ipynb
+++ b/Coursera/ITA/Controle/Week 1/Controle Malha Aberta e Malha Fechada.ipynb
@@ -26,7 +26,34 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Nomeclatura\n",
+    "\n",
+    "A nomeclatura é definida como:\n",
+    "\n",
+    "Referência: $r$($t$) <br/>\n",
+    "Erro: $e$($t$) <br/>\n",
+    "Entrada: $u$($t$) <br/>\n",
+    "Saída: $y$($t$) <br/>\n",
+    "Sinal de ganho do sistema: $k$ <br/>\n",
+    "\n",
+    "<img src=\"images/nomeclatura.svg\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modelagem Massa-Mola-Amortecedor\n",
+    "\n",
+    "A modelagem consiste em criar um modelo matemático para o problema de massa-mola-amortecedor conforme o desenho abaixo:\n",
+    "\n",
+    "<img src=\"images/massa_mola_amortecedor.svg\" />\n",
+    "\n",
+    "Para tanto, parte-se do princípio da lei de Newton em que a soma de todas as forças é igual a massa vezes a aceleração.\n",
+    "\n",
+    "$$ \\sum \\text{forças} = m.a $$"
+   ]
   },
   {
    "cell_type": "code",
