--- a/edX/ASUx/MAT170x/KnowledgeCheck.ipynb
+++ b/edX/ASUx/MAT170x/KnowledgeCheck.ipynb
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Determine $\\theta$ when given the value of cotangent\n",
+    "##### Determine $\\theta$ when given the value of cotangent\n",
     "\n",
     "First, let's build the table for sine, cossine and tangent as:\n",
     "\n",
@@ -137,30 +137,175 @@
     "tan \\theta = - \\frac{1}{\\sqrt{3}} \\\\\n",
     "$\n",
     "\n",
-    "Looking at the table, we can see that the angle when $tan \\theta = \\frac{1}{\\sqrt{3}}$ is 30 degrees. Having the minus signal before the value means that the angle is measured clockwise, and thus, 30 degrees equals to 330 degrees.\n",
+    "Looking at the table, we can see that the angle when $tan \\theta = \\frac{1}{\\sqrt{3}}$ is 30 degrees. The minus signal before the value means that the angle occurs in a quadrant where the tangent is negative -- second and fourth quadrants in the image below (right). Thus, 30 degrees equals to 150 degrees (2nd quadrant) and 330 degrees (4th quadrant).\n",
     "\n",
-    "<img src=\"images/circle_angles.png\" align=\"center\"/>\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/circle_angles.png\" align=\"left\" width=\"300px\"/></td>\n",
+    "        <td><img src=\"images/distribution_signals.png\" align=\"right\" width=\"320px\"/></td>\n",
+    "    </tr>\n",
+    "</table>\n",
     "\n",
     "Knowing that $\\theta (rad) = \\frac{\\theta (degrees) * \\pi}{180}$ we can convert the angle in degrees to radians as:\n",
     "\n",
-    "$\n",
-    "\\theta (rad) = \\frac{\\theta (degrees) * \\pi}{180} \\\\\n",
-    "\\theta (rad) = \\frac{330 \\pi}{180} \\\\\n",
-    "\\theta (rad) = \\frac{11\\pi}{6} \\\\\n",
-    "$\n",
+    "150 degrees  |  330 degrees\n",
+    ":-----------:|:-------------:\n",
+    "$ \\theta (rad) = \\frac{\\theta (degrees) * \\pi}{180} \\\\ \\theta (rad) = \\frac{150 \\pi}{180} \\\\ \\theta (rad) = \\frac{5\\pi}{6} \\\\ $ | $ \\theta (rad) = \\frac{\\theta (degrees) * \\pi}{180} \\\\ \\theta (rad) = \\frac{330 \\pi}{180} \\\\ \\theta (rad) = \\frac{11\\pi}{6} \\\\ $ \n",
     "\n",
-    "As we can see in the image above, the value that corresponds to 330 degrees is $\\frac{11\\pi}{6}$."
+    "As we can see in the image above, the value that corresponds to 150 degrees is $\\frac{5\\pi}{6}$ rads and to 330 degrees is $\\frac{11\\pi}{6}$ rads."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Finding points in a function\n",
+    "## Finding asymptotes and points for a cotangent\n",
     "\n",
     "$\n",
     "y = -2 cot \\left( x + \\frac{\\pi}{2}\\right)\n",
     "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Expanding logarithms\n",
+    "\n",
+    "First, let's review some logarithm's rules:\n",
+    "- $log XY = log X + log Y$\n",
+    "- $\\frac{log X}{log Y} = log X - log Y$\n",
+    "- $log X^y = y log X$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finding the angle between two lines\n",
+    "\n",
+    "Looking at the image below, we have to discover the angle $\\theta$, knowing the distances between Island A, B and C.\n",
+    "\n",
+    "<img src=\"images/paths.png\" align=\"center\" width=\"400px\"/>\n",
+    "\n",
+    "In order to do that, we have to use the law of the cosines, which states $ a^2 = b^2 + c^2 - 2ab\\ cos\\theta$. Thus, we set the values of $a$, $b$ and $c$ in the equation as:\n",
+    "\n",
+    "$\n",
+    "a^2 = b^2 + c^2 - 2ab.cos\\theta \\\\\n",
+    "13^2 = 9^2 + 10^2 - 2.9.10.cos\\theta \\\\\n",
+    "169 = 81 + 100 - 180.cos\\theta \\\\\n",
+    "169 - 181 = -180.cos\\theta \\\\\n",
+    "180.cos\\theta = 12 \\\\\n",
+    "cos\\theta = \\frac{12}{180} \\\\\n",
+    "arccos \\theta = cos^{-1} \\frac{1}{15} = cos^{-1} 0.0667 \\\\\n",
+    "\\theta = 86.1755\\ degrees\n",
+    "$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Angle theta = 86.177446 degrees\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math as m\n",
+    "a = 13\n",
+    "b = 9\n",
+    "c = 10\n",
+    "\n",
+    "v = float((b**2 + c**2) - a**2)/(2*b*c) \n",
+    "theta_rad = m.acos(v)\n",
+    "theta = m.degrees(theta_rad)\n",
+    "print 'Angle theta = %f degrees' % theta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can check the other angles, named B and C for each island. In order to do that, we use the law of the sines, which is described as $\\frac{sin A}{a} = \\frac{sin B}{b} = \\frac{sin C}{c}$. Setting the values in the equation, we have:\n",
+    "\n",
+    "$\n",
+    "\\frac{sin\\theta}{a} = \\frac{sin B}{b} \\\\\n",
+    "\\frac{sin 86.1755}{13} = \\frac{sin B}{9} \\\\\n",
+    "\\frac{0.9978 \\times 9}{13} = sin B \\\\\n",
+    "sin B = 0.6907 \\\\\n",
+    "B = arcsin(0.6908) = sin^{-1} 0.6907 = 43.6935\\ degrees\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Angle B = 43.690895\n"
+     ]
+    }
+   ],
+   "source": [
+    "sinB = (m.sin(theta_rad)/a)*b\n",
+    "B_rad = m.asin(sinB)\n",
+    "B = m.degrees(B_rad)\n",
+    "print 'Angle B = %f' % B"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, the angle C can be computed by the sum of the other angles. Knowing that the sum of the intern angles of a triangle is equal to 180 degrees, we can find the value of C as:\n",
+    "\n",
+    "$\n",
+    "\\theta + B + C = 180 \\\\\n",
+    "C = 180 - (86.1755 + 43.6935) \\\\\n",
+    "C = 50,131\\ degrees \\\\\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Angle C = 50.131658\n"
+     ]
+    }
+   ],
+   "source": [
+    "C = 180 - (theta + B)\n",
+    "print 'Angle C = %f' % C"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculating the difference quotient\n",
+    "\n",
+    "Find the difference quotient $\\frac{f(x+h)-f(x)}{h}$, where $h \\neq 0$ for the function below:\n",
+    "\n",
+    "$$\n",
+    "f(x) = \\frac{5}{x + 8}\n",
+    "$$"
    ]
   },
   {
