--- a/edX/ASUx/MAT170x/KnowledgeCheck.ipynb
+++ b/edX/ASUx/MAT170x/KnowledgeCheck.ipynb
@@ -301,11 +301,39 @@
    "source": [
     "## Calculating the difference quotient\n",
     "\n",
-    "Find the difference quotient $\\frac{f(x+h)-f(x)}{h}$, where $h \\neq 0$ for the function below:\n",
+    "Find the difference quotient $\\frac{f(x+h)-f(x)}{h}$, where $h \\neq 0$ for the function $f(x) = \\frac{5}{x + 8}$. In order to do that, we first replace in the original equation the value of $x$ by $(x+h)$, resulting in:\n",
     "\n",
-    "$$\n",
-    "f(x) = \\frac{5}{x + 8}\n",
-    "$$"
+    "$\n",
+    "f(x) = \\frac{5}{x + 8} \\\\\n",
+    "f(x+h) = \\frac{5}{(x+h) + 8} \\\\\n",
+    "$\n",
+    "\n",
+    "Now, we can solve the equation replacing the values of f(x) and f(x+h) as:\n",
+    "\n",
+    "$\n",
+    "\\frac{f(x+h)-f(x)}{h} \\\\\n",
+    "\\frac{\\frac{5}{x+h+8} - \\frac{5}{x+8}}{h} \\\\\n",
+    "\\frac{\\left(\\frac{5}{x+h+8} - \\frac{5}{x+8}\\right) (x+h+8)(x+8)}{h (x+h+8)(x+8)} \\\\\n",
+    "\\frac{5(x+8) - 5(x+h+8)}{h(x+h+8)(x+8)} \\\\\n",
+    "\\frac{5x+40-5x-40}{h(x+h+8)(x+8)} \\\\\n",
+    "\\frac{-5h}{h(x+h+8)(x+8)} \\\\\n",
+    "\\frac{-5}{(x+h+8)(x+8)} \\\\\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Find the solution\n",
+    "\n",
+    "Find all solutions of the equation in the interval [$0,2\\pi$).\n",
+    "\n",
+    "$$ sin 2x + cos x = 0 $$\n",
+    "\n",
+    "Write your answer in radians in terms of $\\pi$. If there is more than one solution, separate them with commas. \n"
    ]
   },
   {
