--- a/edX/ASUx/MAT170x/KnowledgeCheck.ipynb
+++ b/edX/ASUx/MAT170x/KnowledgeCheck.ipynb
@@ -311,8 +311,10 @@
     "Now, we can solve the equation replacing the values of f(x) and f(x+h) as:\n",
     "\n",
     "$\n",
-    "\\frac{f(x+h)-f(x)}{h} \\\\\n",
-    "\\frac{\\frac{5}{x+h+8} - \\frac{5}{x+8}}{h} \\\\\n",
+    "\\frac{f(x+h)-f(x)}{h}\n",
+    "$<br>$\n",
+    "\\frac{\\frac{5}{x+h+8} - \\frac{5}{x+8}}{h}\n",
+    "$<br>$\n",
     "\\frac{\\left(\\frac{5}{x+h+8} - \\frac{5}{x+8}\\right) (x+h+8)(x+8)}{h (x+h+8)(x+8)} \\\\\n",
     "\\frac{5(x+8) - 5(x+h+8)}{h(x+h+8)(x+8)} \\\\\n",
     "\\frac{5x+40-5x-40}{h(x+h+8)(x+8)} \\\\\n",
