Added trigonometric question

--- a/edX/ASUx/MAT170x/KnowledgeCheck.ipynb
+++ b/edX/ASUx/MAT170x/KnowledgeCheck.ipynb
@@ -329,23 +329,95 @@
     "collapsed": true
    },
    "source": [
-    "## Find the solution\n",
+    "## Find all solutions to a trigonometric function\n",
     "\n",
-    "Find all solutions of the equation in the interval [$0,2\\pi$).\n",
+    "In order to find all solutions of the equation $sin\\ 2x + cos\\ x = 0$ in the interval [$0,2\\pi$), we first replace $sin\\ 2x$ by its identity $2.sin\\ x.cos\\ x$ and solve the equation as:\n",
     "\n",
-    "$$ sin 2x + cos x = 0 $$\n",
+    "$\n",
+    "sin\\ 2x + cos\\ x = 0\n",
+    "$<br>$\n",
+    "(2.sin\\ x.cos\\ x) + cos\\ x = 0\n",
+    "$<br>$\n",
+    "cos\\ x(2.sin\\ x + 1) = 0\n",
+    "$<br>$\n",
+    "\\rightarrow cos\\ x = 0 :: \\frac{\\pi}{2}, \\frac{3\\pi}{2}\n",
+    "$<br>$\n",
+    "\\rightarrow 2.sin\\ x + 1 = 0\n",
+    "$<br>$\n",
+    "\\ \\ \\ \\ \\ sin\\ x = -\\frac{1}{2} :: \\frac{7\\pi}{6}, \\frac{11\\pi}{6}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Progression of decreasing area\n",
     "\n",
-    "Write your answer in radians in terms of $\\pi$. If there is more than one solution, separate them with commas. \n"
+    "A certain forest covers an area of 4100 $km^2$ and each year this area decreases by 7%. We can apply sucessively a multiplication of $\\frac{7}{100}$ for each year. Thus, we have\n",
+    "\n",
+    "Initial area = 4100 $km^2$\n",
+    "\n",
+    "1 year: $4100    - \\frac{4100*7}{100}    = 3813\\    km^2$<br>\n",
+    "2 year: $3813    - \\frac{3813*7}{100}    = 3546.09\\ km^2$<br>\n",
+    "3 year: $3546.09 - \\frac{3546.09*7}{100} = 3297.86\\ km^2$<br>\n",
+    "4 year: $3297.86 - \\frac{3297.86*7}{100} = 3067.01\\ km^2$<br>\n",
+    "5 year: $3067.01 - \\frac{3067.01*7}{100} = 2852.32\\ km^2$<br>\n",
+    "6 year: $2852.32 - \\frac{2852.32*7}{100} = 2652.66\\ km^2$<br>\n",
+    "\n",
+    "Thus, after 6 years the total area of the forest will cover about 2653 $km^2$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 year: 3813.00\n",
+      "2 year: 3546.09\n",
+      "3 year: 3297.86\n",
+      "4 year: 3067.01\n",
+      "5 year: 2852.32\n",
+      "6 year: 2652.66\n",
+      "\n",
+      "After 6 years, the total area od the forest will cover about 2653 km2\n"
+     ]
+    }
+   ],
+   "source": [
+    "initial = 4100\n",
+    "years = 6\n",
+    "\n",
+    "updated = initial\n",
+    "for y in range(1, years+1):\n",
+    "    updated = updated - (updated*7.)/100.\n",
+    "    print '%d year: %.2f' % (y, updated)\n",
+    "    \n",
+    "print\n",
+    "print 'After %d years, the total area od the forest will cover about %.f km2' % (y, updated)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## \n",
+    "An initial population of 80 fish is introduced into a lake. This fish population grows according to a continuous exponential growth model. There are 216 fish in the lake after 15 years.\n",
+    "\n",
+    "(a) Let $t$ be the time (in years) since the initial population is introduced, and let $y$ be the number of fish at time $t$. Write a formula relating $y$ to $t$. Use exact expressions to fill in the missing parts of the formula. Do not use approximations.\n",
+    "\n",
+    "$\n",
+    "y = []e^([])t\n",
+    "$\n",
+    "\n",
+    "(b) How many fish are there 17 years after the initial population is introduced? Do not round any intermediate computations, and round your answer to the nearest whole number.\n",
+    "\n",
+    "[] fish"
+   ]
   }
  ],
  "metadata": {
