Added trigonometric question

--- a/edX/ASUx/MAT170x/KnowledgeCheck.ipynb
+++ b/edX/ASUx/MAT170x/KnowledgeCheck.ipynb
@@ -17,10 +17,13 @@
     "What is the value of $y$ in the equation $\\sqrt{y+9} = 5$?\n",
     "\n",
     "$\n",
-    "(\\sqrt{y+9})^2 = 5^2 \\\\\n",
-    "y + 9 = 25 \\\\\n",
-    "y = 25 -9 \\\\\n",
-    "y = 16 \\\\\n",
+    "(\\sqrt{y+9})^2 = 5^2\n",
+    "$<br>$\n",
+    "y + 9 = 25\n",
+    "$<br>$\n",
+    "y = 25 -9\n",
+    "$<br>$\n",
+    "y = 16\n",
     "$"
    ]
   },
@@ -54,9 +57,11 @@
     "For example, considering the function $y = \\frac{5}{2} sin\\left(\\frac{2}{3}x\\right)$, we find that the equation $y = a\\times sin(kx)$ contains the value of $a = \\frac{5}{2}$ and the value of $k = \\frac{2}{3}$. Thus, replacing values in the equation of the period, we have:\n",
     "\n",
     "$\n",
-    "y = 0 \\rightarrow x = 0 \\\\\n",
-    "y = \\frac{T}{2} \\rightarrow x = \\frac{\\frac{2\\pi}{k}}{2} \\rightarrow \\frac{2\\pi}{2k} \\rightarrow \\frac{2\\pi}{2.\\frac{2}{3}} \\rightarrow \\frac{2\\pi}{\\frac{4}{3}} \\rightarrow \\frac{6\\pi}{4} \\rightarrow \\frac{3\\pi}{2} \\\\\n",
-    "y = T \\rightarrow x = \\frac{2\\pi}{k} \\rightarrow \\frac{2\\pi}{\\frac{2}{3}} \\rightarrow \\frac{6\\pi}{2} \\rightarrow 3\\pi \\\\\n",
+    "y = 0 \\rightarrow x = 0\n",
+    "$<br>$\n",
+    "y = \\frac{T}{2} \\rightarrow x = \\frac{\\frac{2\\pi}{k}}{2} \\rightarrow \\frac{2\\pi}{2k} \\rightarrow \\frac{2\\pi}{2.\\frac{2}{3}} \\rightarrow \\frac{2\\pi}{\\frac{4}{3}} \\rightarrow \\frac{6\\pi}{4} \\rightarrow \\frac{3\\pi}{2}\n",
+    "$<br>$\n",
+    "y = T \\rightarrow x = \\frac{2\\pi}{k} \\rightarrow \\frac{2\\pi}{\\frac{2}{3}} \\rightarrow \\frac{6\\pi}{2} \\rightarrow 3\\pi\n",
     "$\n",
     "\n",
     "Finally, the values of maximum and minima of $y$ are expressed by the value of $a$ as illustred in the image. Hence, the maximum value to the example is $a = \\frac{5}{2}$ and the minimum value is $-a = -\\frac{5}{2}$.\n"
@@ -132,9 +137,12 @@
     "we can calculate the angle $\\theta$ given in an expression. For example, consider the equation $cot \\theta + \\sqrt{3} = 0$, we can discover the value of $\\theta$ as:\n",
     "\n",
     "$\n",
-    "cot \\theta + \\sqrt{3} = 0 \\\\\n",
-    "\\frac{1}{tan \\theta} = - \\sqrt{3} \\\\\n",
-    "tan \\theta = - \\frac{1}{\\sqrt{3}} \\\\\n",
+    "cot \\theta + \\sqrt{3} = 0\n",
+    "$<br>$\n",
+    "\\frac{1}{tan \\theta} = - \\sqrt{3}\n",
+    "$<br>$\n",
+    "tan \\theta = - \\frac{1}{\\sqrt{3}}\n",
+    "$<br>$\n",
     "$\n",
     "\n",
     "Looking at the table, we can see that the angle when $tan \\theta = \\frac{1}{\\sqrt{3}}$ is 30 degrees. The minus signal before the value means that the angle occurs in a quadrant where the tangent is negative -- second and fourth quadrants in the image below (right). Thus, 30 degrees equals to 150 degrees (2nd quadrant) and 330 degrees (4th quadrant).\n",
@@ -193,13 +201,20 @@
     "In order to do that, we have to use the law of the cosines, which states $ a^2 = b^2 + c^2 - 2ab\\ cos\\theta$. Thus, we set the values of $a$, $b$ and $c$ in the equation as:\n",
     "\n",
     "$\n",
-    "a^2 = b^2 + c^2 - 2ab.cos\\theta \\\\\n",
-    "13^2 = 9^2 + 10^2 - 2.9.10.cos\\theta \\\\\n",
-    "169 = 81 + 100 - 180.cos\\theta \\\\\n",
-    "169 - 181 = -180.cos\\theta \\\\\n",
-    "180.cos\\theta = 12 \\\\\n",
-    "cos\\theta = \\frac{12}{180} \\\\\n",
-    "arccos \\theta = cos^{-1} \\frac{1}{15} = cos^{-1} 0.0667 \\\\\n",
+    "a^2 = b^2 + c^2 - 2ab.cos\\theta\n",
+    "$<br>$\n",
+    "13^2 = 9^2 + 10^2 - 2.9.10.cos\\theta\n",
+    "$<br>$\n",
+    "169 = 81 + 100 - 180.cos\\theta\n",
+    "$<br>$\n",
+    "169 - 181 = -180.cos\\theta\n",
+    "$<br>$\n",
+    "180.cos\\theta = 12\n",
+    "$<br>$\n",
+    "cos\\theta = \\frac{12}{180}\n",
+    "$<br>$\n",
+    "arccos \\theta = cos^{-1} \\frac{1}{15} = cos^{-1} 0.0667\n",
+    "$<br>$\n",
     "\\theta = 86.1755\\ degrees\n",
     "$\n"
    ]
@@ -236,10 +251,14 @@
     "We can check the other angles, named B and C for each island. In order to do that, we use the law of the sines, which is described as $\\frac{sin A}{a} = \\frac{sin B}{b} = \\frac{sin C}{c}$. Setting the values in the equation, we have:\n",
     "\n",
     "$\n",
-    "\\frac{sin\\theta}{a} = \\frac{sin B}{b} \\\\\n",
-    "\\frac{sin 86.1755}{13} = \\frac{sin B}{9} \\\\\n",
-    "\\frac{0.9978 \\times 9}{13} = sin B \\\\\n",
-    "sin B = 0.6907 \\\\\n",
+    "\\frac{sin\\theta}{a} = \\frac{sin B}{b}\n",
+    "$<br>$\n",
+    "\\frac{sin 86.1755}{13} = \\frac{sin B}{9}\n",
+    "$<br>$\n",
+    "\\frac{0.9978 \\times 9}{13} = sin B\n",
+    "$<br>$\n",
+    "sin B = 0.6907\n",
+    "$<br>$\n",
     "B = arcsin(0.6908) = sin^{-1} 0.6907 = 43.6935\\ degrees\n",
     "$"
    ]
@@ -304,8 +323,9 @@
     "Find the difference quotient $\\frac{f(x+h)-f(x)}{h}$, where $h \\neq 0$ for the function $f(x) = \\frac{5}{x + 8}$. In order to do that, we first replace in the original equation the value of $x$ by $(x+h)$, resulting in:\n",
     "\n",
     "$\n",
-    "f(x) = \\frac{5}{x + 8} \\\\\n",
-    "f(x+h) = \\frac{5}{(x+h) + 8} \\\\\n",
+    "f(x) = \\frac{5}{x + 8}\n",
+    "$<br>$\n",
+    "f(x+h) = \\frac{5}{(x+h) + 8}\n",
     "$\n",
     "\n",
     "Now, we can solve the equation replacing the values of f(x) and f(x+h) as:\n",
@@ -315,11 +335,15 @@
     "$<br>$\n",
     "\\frac{\\frac{5}{x+h+8} - \\frac{5}{x+8}}{h}\n",
     "$<br>$\n",
-    "\\frac{\\left(\\frac{5}{x+h+8} - \\frac{5}{x+8}\\right) (x+h+8)(x+8)}{h (x+h+8)(x+8)} \\\\\n",
-    "\\frac{5(x+8) - 5(x+h+8)}{h(x+h+8)(x+8)} \\\\\n",
-    "\\frac{5x+40-5x-40}{h(x+h+8)(x+8)} \\\\\n",
-    "\\frac{-5h}{h(x+h+8)(x+8)} \\\\\n",
-    "\\frac{-5}{(x+h+8)(x+8)} \\\\\n",
+    "\\frac{\\left(\\frac{5}{x+h+8} - \\frac{5}{x+8}\\right) (x+h+8)(x+8)}{h (x+h+8)(x+8)}\n",
+    "$<br>$\n",
+    "\\frac{5(x+8) - 5(x+h+8)}{h(x+h+8)(x+8)}\n",
+    "$<br>$\n",
+    "\\frac{5x+40-5x-40}{h(x+h+8)(x+8)}\n",
+    "$<br>$\n",
+    "\\frac{-5h}{h(x+h+8)(x+8)}\n",
+    "$<br>$\n",
+    "\\frac{-5}{(x+h+8)(x+8)}\n",
     "$"
    ]
   },
@@ -411,13 +435,22 @@
     "(a) Let $t$ be the time (in years) since the initial population is introduced, and let $y$ be the number of fish at time $t$. Write a formula relating $y$ to $t$. Use exact expressions to fill in the missing parts of the formula. Do not use approximations.\n",
     "\n",
     "$\n",
-    "y = []e^([])t\n",
+    "y = []e^{([])}t\n",
     "$\n",
     "\n",
     "(b) How many fish are there 17 years after the initial population is introduced? Do not round any intermediate computations, and round your answer to the nearest whole number.\n",
     "\n",
     "[] fish"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
