Added trigonometric question

--- a/edX/ASUx/MAT170x/KnowledgeCheck.ipynb
+++ b/edX/ASUx/MAT170x/KnowledgeCheck.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "## Sinusoidal function: $x$-interception\n",
     "\n",
-    "Finding the points where a sinusoidal function described as $y = a\\times sin(kx)$ intercept the $x$ axis can be performed by inserting the value of $k$ in the period $T$ as illustrated in the image:\n",
+    "Finding the points where a sinusoidal function described as $y = a.sin(kx)$ intercept the $x$ axis can be performed by inserting the value of $k$ in the period $T$ as illustrated in the image:\n",
     "\n",
     "<img src=\"images/sinusoidal_function.png\" align=\"center\"/>\n",
     "\n",
@@ -54,7 +54,7 @@
     "\n",
     "$$ T = \\frac{360}{k} = \\frac{2\\pi}{k} $$\n",
     "\n",
-    "For example, considering the function $y = \\frac{5}{2} sin\\left(\\frac{2}{3}x\\right)$, we find that the equation $y = a\\times sin(kx)$ contains the value of $a = \\frac{5}{2}$ and the value of $k = \\frac{2}{3}$. Thus, replacing values in the equation of the period, we have:\n",
+    "For example, considering the function $y = \\frac{5}{2} sin\\left(\\frac{2}{3}x\\right)$, we find that the equation $y = a.sin(kx)$ contains the value of $a = \\frac{5}{2}$ and the value of $k = \\frac{2}{3}$. Thus, replacing values in the equation of the period, we have:\n",
     "\n",
     "$\n",
     "y = 0 \\rightarrow x = 0\n",
