Added ipynb with the content of the first part of the second week

--- a/Coursera/Duke University/Probability-intro/Week 2/1. Exploring Numerical Data.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 2/1. Exploring Numerical Data.ipynb
@@ -235,9 +235,8 @@
    "metadata": {},
    "source": [
     "5) none  \n",
-    "\n",
-    "- [ ] 25% of the countries have incomes per person below \\$2438.\n",
-    "- [x] 75% of the countries have incomes per person above \\$16650.  \n",
+    ":ballot_box_with_check: 25% of the countries have incomes per person below \\$2438.  \n",
+    "&#9745; 75% of the countries have incomes per person above \\$16650.  \n",
     "- [ ] IQR is 14212.  \n",
     "- [ ] The mean is expected to be greater than the median since the distribution is right skewed."
    ]
