Added ipynb with the content of the first part of the second week

--- a/Coursera/Duke University/Probability-intro/Week 2/1. Exploring Numerical Data.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 2/1. Exploring Numerical Data.ipynb
@@ -224,21 +224,10 @@
     "<img src=\"images/income_per_person.jpg\" align=\"center\" width=\"500\"/>  \n",
     "Min. = \\$403, Q1 = \\$2438, Median = \\$6975, Q3 = \\$16650, Max. = \\$91490.  \n",
     "\n",
-    "<input type=\"checkbox\"> 25% of the countries have incomes per person below \\$2438.\n",
-    "<input type=\"checkbox\" checked> 75% of the countries have incomes per person above \\$16650.  \n",
-    "<input type=\"checkbox\"> IQR is 14212.  \n",
-    "<input type=\"checkbox\"> The mean is expected to be greater than the median since the distribution is right skewed."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "5) none  \n",
-    ":ballot_box_with_check: 25% of the countries have incomes per person below \\$2438.  \n",
+    "&#9744; 25% of the countries have incomes per person below \\$2438.  \n",
     "&#9745; 75% of the countries have incomes per person above \\$16650.  \n",
-    "- [ ] IQR is 14212.  \n",
-    "- [ ] The mean is expected to be greater than the median since the distribution is right skewed."
+    "&#9744; IQR is 14212.  \n",
+    "&#9744; The mean is expected to be greater than the median since the distribution is right skewed."
    ]
   },
   {
