Added ipynb with the content of the first part of the second week

--- a/Coursera/Duke University/Probability-intro/Week 2/1. Exploring Numerical Data.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 2/1. Exploring Numerical Data.ipynb
@@ -40,28 +40,28 @@
     "### Questions\n",
     "\n",
     "1) Which of these variables do you expect to be uniformly distributed?  \n",
-    "<input type=\"checkbox\"> weights of adult females  \n",
-    "<input type=\"checkbox\"> salaries of a random sample of people from Europe  \n",
-    "<input type=\"checkbox\"> housing prices in a large city  \n",
-    "<input type=\"checkbox\" checked> birthdays of people living in your neighborhood (day of the month)\n",
+    "&#9744; weights of adult females  \n",
+    "&#9744; salaries of a random sample of people from Europe  \n",
+    "&#9744; housing prices in a large city  \n",
+    "&#9745; birthdays of people living in your neighborhood (day of the month)  \n",
     "\n",
     "<br> \n",
     "\n",
     "2) Which of the following cannot be determined from a boxplot?  \n",
-    "<input type=\"checkbox\" checked> modality (whether the distribution is unimodal, bimodal, uniform, etc.)  \n",
-    "<input type=\"checkbox\"> skewness  \n",
-    "<input type=\"checkbox\"> outliers  \n",
-    "<input type=\"checkbox\"> minimum and maximum\n",
+    "&#9745; modality (whether the distribution is unimodal, bimodal, uniform, etc.)  \n",
+    "&#9744; skewness  \n",
+    "&#9744; outliers  \n",
+    "&#9744; minimum and maximum  \n",
     "\n",
     "<br> \n",
     "\n",
     "3) Determine which histogram matches which box plot.  \n",
     "<img src=\"images/matches.jpg\" align=\"center\" width=\"600\"/>  \n",
-    "<input type=\"checkbox\" checked> A - 2, B - 3, C - 1\n",
-    "<input type=\"checkbox\"> A - 1, B - 2, C - 3\n",
-    "<input type=\"checkbox\"> A - 1, B - 3, C - 2\n",
-    "<input type=\"checkbox\"> A - 2, B - 1, C - 3\n",
-    "<input type=\"checkbox\"> A - 3, B - 1, C - 2"
+    "&#9745; A - 2, B - 3, C - 1  \n",
+    "&#9744; A - 1, B - 2, C - 3  \n",
+    "&#9744; A - 1, B - 3, C - 2  \n",
+    "&#9744; A - 2, B - 1, C - 3  \n",
+    "&#9744; A - 3, B - 1, C - 2  "
    ]
   },
   {
@@ -108,10 +108,10 @@
     "### Questions\n",
     "\n",
     "1. Which of the following is true? (Hint: Sketching the distributions might be useful.)  \n",
-    "<input type=\"checkbox\"> In a symmetric distribution, more than 50% of the data are below and less than 50% are above the mean.  \n",
-    "<input type=\"checkbox\"> In a left skewed distribution, roughly 50% of the data are below and 50% are above the mean.  \n",
-    "<input type=\"checkbox\"> In a right skewed distribution, less than 50% of the data are below the mean.  \n",
-    "<input type=\"checkbox\" checked> In a left skewed distribution, less than 50% of the data are below the mean."
+    "&#9744; In a symmetric distribution, more than 50% of the data are below and less than 50% are above the mean.  \n",
+    "&#9744; In a left skewed distribution, roughly 50% of the data are below and 50% are above the mean.  \n",
+    "&#9744; In a right skewed distribution, less than 50% of the data are below the mean.  \n",
+    "&#9745; In a left skewed distribution, less than 50% of the data are below the mean.  "
    ]
   },
   {
@@ -192,7 +192,7 @@
     "\n",
     "This measure, is most readily available in a box plot. \n",
     "\n",
-    "<img src=\"images/life_expectancy.png\" align=\"center\" width=\"500\"/>\n",
+    "<img src=\"images/life_expectancy.png\" align=\"center\" width=\"400\"/>\n",
     "\n",
     "In this box plot, the first quartile Q1 is 65, and the third quartile is 77. So the IQR is the difference between these two, 12. In describing the distribution of life expectancies, we can say that the middle 50% of countries, have life expectancies between 65 and 77 years old. The value of the IQR itself, 12, isn't as informative on its own, but would be useful when comparing distributions. The reason why the IQR is a more reliable measure of spread in sample data than the range, which is maximum minus minimum, is that it doesn't rely on the endpoints. Which may be unusual observations or potential outliers. \n",
     "\n",
@@ -200,23 +200,23 @@
     "### Questions\n",
     "\n",
     "1) Given that the variance of life expectancies was 83.06 squared years, which of the following is the correct standard deviation and units?  \n",
-    "<input type=\"checkbox\"> $\\sqrt{83.06} = 9.1$ squared years  \n",
-    "<input type=\"checkbox\" checked> $\\sqrt{83.06} = 9.1$ years  \n",
-    "<input type=\"checkbox\"> $83.06^{2} = 6899$ years  \n",
-    "<input type=\"checkbox\"> $83.06^{2} = 6899$ squared years  \n",
-    "<input type=\"checkbox\"> $\\frac{83.06}{(201 - 1)} = 0.4153$ years  \n",
+    "&#9744; $\\sqrt{83.06} = 9.1$ squared years  \n",
+    "&#9745; $\\sqrt{83.06} = 9.1$ years  \n",
+    "&#9744; $83.06^{2} = 6899$ years  \n",
+    "&#9744; $83.06^{2} = 6899$ squared years  \n",
+    "&#9744; $\\frac{83.06}{(201 - 1)} = 0.4153$ years  \n",
     "\n",
     "<br>\n",
     "\n",
     "2) Which of the following sets of cars, has more diverse composition of colors? SET 1 with yellow, red, green, purple and blue colors or, SET 2 with three blue and two purple cars.  \n",
-    "<input type=\"checkbox\" checked> Set 1 (yellow, red, green, purple, blue)  \n",
-    "<input type=\"checkbox\"> Set 2 (three blue, two purple)  \n",
+    "&#9745; Set 1 (yellow, red, green, purple, blue)  \n",
+    "&#9744;Set 2 (three blue, two purple)  \n",
     "\n",
     "<br>\n",
     "\n",
     "3) Which of the following sets of cars has more variable mileage? Set 1 with cars with 10, 20, 30, 40, and 50 miles per gallon. Or, Set 2 with 3 cars that get 10 miles per gallon, and 2 cars that get 50 miles per gallon.  \n",
-    "<input type=\"checkbox\"> Set 1 (10, 20, 30, 40, and 50 miles per gallon)  \n",
-    "<input type=\"checkbox\" checked> Set 2 (three 10, and two 50 miles per gallon)  \n",
+    "&#9744; Set 1 (10, 20, 30, 40, and 50 miles per gallon)  \n",
+    "&#9745; Set 2 (three 10, and two 50 miles per gallon)  \n",
     "\n",
     "<br>\n",
     "\n",
