Added ipynb with the content of the first part of the second week

--- a/Coursera/Duke University/Probability-intro/Week 2/1. Exploring Numerical Data.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 2/1. Exploring Numerical Data.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "### Questions\n",
     "\n",
-    "1. Which of the following is true? (Hint: Sketching the distributions might be useful.)  \n",
+    "1) Which of the following is true? (Hint: Sketching the distributions might be useful.)  \n",
     "&#9744; In a symmetric distribution, more than 50% of the data are below and less than 50% are above the mean.  \n",
     "&#9744; In a left skewed distribution, roughly 50% of the data are below and 50% are above the mean.  \n",
     "&#9744; In a right skewed distribution, less than 50% of the data are below the mean.  \n",
@@ -222,10 +222,10 @@
     "\n",
     "4) Which of the following is false about the distribution of income per person in countries?  \n",
     "<img src=\"images/income_per_person.jpg\" align=\"center\" width=\"500\"/>  \n",
-    "Min. = \\$403, Q1 = \\$2438, Median = \\$6975, Q3 = \\$16650, Max. = \\$91490.  \n",
+    "Min. = 403, Q1 = 2438, Median = 6975, Q3 = 16650, Max. = 91490.  \n",
     "\n",
-    "&#9744; 25% of the countries have incomes per person below \\$2438.  \n",
-    "&#9745; 75% of the countries have incomes per person above \\$16650.  \n",
+    "&#9744; 25% of the countries have incomes per person below 2438.  \n",
+    "&#9745; 75% of the countries have incomes per person above 16650.  \n",
     "&#9744; IQR is 14212.  \n",
     "&#9744; The mean is expected to be greater than the median since the distribution is right skewed."
    ]
