--- a/Coursera/Duke University/Probability-intro/Week 2/1. Exploring Numerical Data.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 2/1. Exploring Numerical Data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualizing Numerical Data\n",
+    "## Visualizing Numerical Data\n",
     "\n",
     "### Evaluating the relationship\n",
     "\n",
